# echarts-jsdom

./: README.md  default.nix  echarts-jsdom.cabal  echarts.cabal  shell.nix
backend/: backend.cabal
backend/src/: Backend.hs
common/: common.cabal
common/src/Common/: Route.hs  Types.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
frontend/: frontend.cabal
frontend/src/: ECharts.hs  Frontend.hs
frontend/src/ECharts/: ChartOptions.hs  Data.hs  DeriveToJSVal.hs  Examples.hs  Internal.hs  Series.hs  Types.hs
frontend/src/ECharts/Data/: Internal.hs
frontend/src/ECharts/Internal/: EChartGrid.hs  EChartLabel.hs  EChartLegend.hs  EChartSeries.hs  EChartTitle.hs  EChartToolBox.hs  EChartToolTip.hs  EChartTypes.hs
frontend/src/ECharts/Series/: Internal.hs
frontend/src/Echarts/: Internal.hs  Types.hs
src/: ECharts.hs  Frontend.hs
src/ECharts/: Data.hs  DeriveToJSVal.hs  Examples.hs  ExamplesData.hs  Internal.hs  Series.hs  Types.hs
src/ECharts/Data/: Internal.hs
src/ECharts/Internal/: EChartGrid.hs  EChartLabel.hs  EChartLegend.hs  EChartSeries.hs  EChartTitle.hs  EChartToolBox.hs  EChartToolTip.hs  EChartTypes.hs
src/ECharts/Series/: Internal.hs
